# 3dcitydb-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENCE  README.md  pyproject.toml  requirements.txt
production/: .dockerignore  .env.example  docker-compose.byod.yml  docker-compose.fullstack.yml
production/docker/: Dockerfile  entrypoint.sh  patch_gradio_client.py
production/docs/: mcp-tools-reference.md  option1-pypi.md  option2-docker-byod.md  option3-docker-fullstack.md
production/webui/: app.py  events.py  importer.py  llm_utils.py  mcp_client.py  requirements.txt
production/webui/backends/: __init__.py  cloud.py  local.py
src/citydb_mcp/: __init__.py  __main__.py  agent.py  db.py  doctor.py  models.py  server.py  server_sse.py  token_counter.py
src/citydb_mcp/tools/: __init__.py  assembly.py  dynamic_tools.py  runtime_tools.py  static_tools.py
tests/: test_assembly.py  test_server.py
